--- a/work-project8.html
+++ b/work-project8.html
@@ -31,7 +31,7 @@
         <h2>Featured Works</h2>
         <div class="grid-x" data-equalizer data-equalize-on="medium">
           <div class="cell small-12 medium-6" data-equalizer-watch>
-            <a href="work-project1.html"><img src="https://via.placeholder.com/600x350"></a>
+            <img src="https://via.placeholder.com/600x350">
           </div>
 
           <div class="cell small-12 medium-6" data-equalizer-watch>
