--- a/work-project1.html
+++ b/work-project1.html
@@ -9,44 +9,85 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header>
-      <div>
-        <a href="index.html"><img src="img/" alt="Brieanna Kroeger Graphic Design Logo" width="300"></a>
+    <div class="grid-x">
+      <div class="cell small-12 large-2" style="background-color: pink;">
+          <header>
+              <a href="#"><img src=""></a>
+              <nav>
+                  <ul>
+                      <li><a href="#work">Work</a></li>
+                      <li><a href="#about">About</a></li>
+                      <li><a href="#contact">Contact</a></li>
+                  </ul>
+              </nav>
+          </header>
       </div>
-      <nav>
-        <ul class="vertical menu">
-          <li><a href="#">Work</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-
-      <div class="grid-container">
-        
-        <div class="grid-x" data-equalizer data-equalize-on="medium">
-          <div class="cell small-12 medium-6" data-equalizer-watch>
+      <div class="cell small-12 large-10" style="background-color: orange;">
+        <div class="grid-x">
+          <div class="cell small-12 medium-6" >
             <h2>Ten Thousand Villages</h2>
           </div>
 
-          <div class="cell small-12 medium-6" data-equalizer-watch>
+          <div class="cell small-12 medium-6" >
             <h3>Annual Report</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
               et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Enim sed faucibus turpis in eu mi bibendum. 
               At in tellus integer feugiat. </p>
           </div>
-        </div>
 
+          
+        </div>
+        <div class="cell small-12">
+          <img src="https://via.placeholder.com/1000x600">
+        </div>
         <div>
-          <img src="" alt="">
+          <div class=" cell small-12 orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+            <div class="orbit-wrapper">
+              <div class="orbit-controls">
+                <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+                <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+              </div>
+              <ul class="orbit-container">
+                <li class="is-active orbit-slide">
+                  <figure class="orbit-figure">
+                    <img class="orbit-image" src="https://placehold.it/1200x600/999?text=Slide-1" alt="Space">
+                    <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
+                  </figure>
+                </li>
+                <li class="orbit-slide">
+                  <figure class="orbit-figure">
+                    <img class="orbit-image" src="https://placehold.it/1200x600/888?text=Slide-2" alt="Space">
+                    <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+                  </figure>
+                </li>
+                <li class="orbit-slide">
+                  <figure class="orbit-figure">
+                    <img class="orbit-image" src="https://placehold.it/1200x600/777?text=Slide-3" alt="Space">
+                    <figcaption class="orbit-caption">Encapsulating</figcaption>
+                  </figure>
+                </li>
+                <li class="orbit-slide">
+                  <figure class="orbit-figure">
+                    <img class="orbit-image" src="https://placehold.it/1200x600/666&text=Slide-4" alt="Space">
+                    <figcaption class="orbit-caption">Outta This World</figcaption>
+                  </figure>
+                </li>
+              </ul>
+            </div>
+            <nav class="orbit-bullets">
+              <button class="is-active" data-slide="0">
+                <span class="show-for-sr">First slide details.</span>
+                <span class="show-for-sr" data-slide-active-label>Current Slide</span>
+              </button>
+              <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+              <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+              <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
+            </nav>
+          </div>
+
         </div>
-
-        *gallery here*
-      </div>
-
-
-    </main>
+        </div>
+        </div>
 
 
     <script src="js/vendor/jquery.js"></script>
