--- a/work-project1.html
+++ b/work-project1.html
@@ -41,7 +41,7 @@
           
         </div>
         <div class="cell small-12">
-          <img src="https://via.placeholder.com/1000x600">
+          <img src="img/P1-annual-report-front.jpg" width="100%">
         </div>
           <div class=" cell small-12 orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
             <div class="orbit-wrapper">
@@ -89,7 +89,7 @@
           <div>
             <div class="cell small-4" id="buttons">
               <div>
-                <a href="work-project8.html" class="previous-btn"></a>
+                <a href="work-project8.html" class="previous-btn"><img src="img/previous-button.svg" width="100px"> </a>
               </div>
             </div>
             <div class="cell small-4" id="next-btn">
