--- a/work-project2.html
+++ b/work-project2.html
@@ -92,17 +92,13 @@
         
         <div class="grid-x">
           <div class="cell small-2">
-              <div class="previous-btn">
-                <a href="work-project8.html" id="prev"><p>previous</p><img>
-                </a>
-               </div> 
+                <a href="work-project8.html"class="previous-btn" >
+                </a> 
           </div>
           
           <div class="cell small-2 small-offset-5 medium-offset-7 large-offset-8">
-            <div class="next-btn">
-              <a href="work-project2.html" ><img>
+              <a href="work-project2.html" class="next-btn">
               </a>
-             </div> 
           </div>       
         </div>
 
