final FINAL push
added the links for sprites

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
             <div class="cell small-12 medium-6 medium-offset-1" id="sprites">
               <p><b>Brieanna Kroeger</b> <br> brieannankroeger@gmail.com</p>
               <ul>
-                <li><a href=""><i class="fab fa-instagram-square"></i><span class="sprites">Instagram</span></a></li>
-                <li><a href=""><i class="fab fa-linkedin"></i><span class="sprites">Linked In</span></a></li>
-                <li><a href=""><i class="fab fa-dribbble-square"></i><span class="sprites">Dribbble</span></a></li>
+                <li><a href="https://www.instagram.com/briezy.design/" target="_blank">  <i class="fab fa-instagram-square"></i><span class="sprites">Instagram</span></a></li>
+                <li><a href="https://www.linkedin.com/in/brieanna-kroeger-542489172/" target="_blank"><i class="fab fa-linkedin"></i><span class="sprites">Linked In</span></a></li>
+                <li><a href="https://www.behance.net/briezydesign" target="_blank"><i class="fab fa-behance-square"></i><span class="sprites">Behance</span></a></li>
               </ul>
             
             </div>
